--- a/Bliblioteca 2020/index.html
+++ b/Bliblioteca 2020/index.html
@@ -915,14 +915,29 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-12 mb-5">
+            <div class="box">
+              <h5>Observações para usar o componente</h5>
+              <h6>Chamar no head do html:</h6>
+              <p>CSS do Bootstrap v4.2.1: &lt;link rel=&quot;stylesheet&quot; href=&quot;css/bootstrap.min.css&quot;&gt;</p>
+              <p>CSS do componente do swiper.min.css &lt;link rel=&quot;stylesheet&quot; href=&quot;css/swiper.min.css&quot;&gt;</p>
+              <p>CSS do estilo.css do componente &lt;link rel=&quot;stylesheet&quot; href=&quot;css/estilo.css&quot;&gt;</p>
+              <h6>Chamar os scripts no final da página antes do fechamento da tag body:</h6>
+              <p>JS do Jquery Slim Min 3.3.1: &lt;script src=&quot;js/jquery-3.3.1.slim.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>JS do Popper Min: &lt;script src=&quot;js/popper.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>JS do Bootstrap v4.2.1: &lt;script src=&quot;js/bootstrap.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>JS do Swiper Min: &lt;script src=&quot;js/swiper.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>JS Config swiper: &lt;script src=&quot;js/config-swiper.js&quot;&gt;&lt;/script&gt;</p>
+              <h6>Baixar arquivos:</h6>
+            </div>
+          </div>
+          <div class="col-6">
             <div class="box">
               <h2>JS</h2>
-              <p>Usando: &lt;script src=&quot;js/jquery-3.3.1.slim.min.js&quot;&gt;&lt;/script&gt;</p>
-              <p>&lt;script src=&quot;js/swiper.min.js&quot;&gt;&lt;/script&gt;</p>
+              <p>config-swiper.js</p>
               <pre>
                 <code class="language-JavaScript" data-lang="JavaScript">
-                  //Saber mais, documentcao
+                  // Saber mais, documentacao
                   // https://swiperjs.com/get-started/
                   // https://github.com/nolimits4web/swiper
 
@@ -960,7 +975,6 @@
           <div class="col-md-6">
             <div class="box">
               <h2>HTML</h2>
-              <p>Usando Bootstrap v4.2.1: &lt;link rel=&quot;stylesheet&quot; href=&quot;css/bootstrap.min.css&quot;&gt;</p>
               <pre>
                 <code class="language-html" data-lang="html">
                   &lt;!-- Swiper --&gt;
@@ -1098,6 +1112,7 @@
           <div class="col-md-6">
             <div class="box">
               <h2>CSS</h2>
+              <p>estilo.css</p>
               <pre>
                 <code class="language-css" data-lang="css">
                   // slider / carousel
