Atualização da biblioteca + componente tela form login.

--- a/Bliblioteca 2020/index.html
+++ b/Bliblioteca 2020/index.html
@@ -618,7 +618,7 @@
                    }
 
                   #checkbox[type=&quot;checkbox&quot;]:not(:checked),
-                  [type=&quot;checkbox&quot;]:checked {
+                  #checkbox[type=&quot;checkbox&quot;]:checked {
                     position: absolute;
                     display: none;
                   }
